cecil (0.6-2) UNRELEASED; urgency=low

  * debian/rules, debian/control:
    + updated for Mono 2.0 transition
  * debian/control:
    + added Homepage field, dropped from long description
    + debhelper dependency bumped to >= 7
    + added ${misc:Depends} dependency
    + Standards-Version bumped to 3.8.0:
      - debian/README.source added
  * debian/compat bumped to 7
  * debian/rules updated: using dh7-style
  * debian/patches/:
    + 01_assembly-version.dpatch: added description
  * debian/watch added

 -- David Paleino <d.paleino@gmail.com>  Sat, 07 Feb 2009 21:28:03 +0100

cecil (0.6-1) unstable; urgency=low

  [ Jose Carlos Garcia Sogo ]
  * New upstream release
  * debian/control:
    + Bump Standards-Version. No changes needed
    + Depend on cli-common-dev (>= 0.5.4)
  * Use dh_clifixperms and dh_clistrip instead of manual stuff

  [ Sebastian Dröge ]
  * debian/install,
    debian/rules:
    + Build the assemblies by hand now as upstream has a broken build system.
    + Clean up and fix some things.
  * debian/patches/01_assembly-version.dpatch:
    + Change assembly version back to 0.5.0.0 as it's ABI compatible.

 -- Sebastian Dröge <slomo@debian.org>  Thu, 20 Mar 2008 18:03:02 +0100

cecil (0.5-2) unstable; urgency=low

  * Merge experimental branch and upload to unstable.
  * Make sure we use mono.snk key to sign binaries.

 -- Jose Carlos Garcia Sogo <jsogo@debian.org>  Sun, 15 Apr 2007 21:43:04 +0200

cecil (0.5-1) experimental; urgency=low

  * New upstream version.
  * debian/control:
     + Bump build dependency to cli-common-dev >= 0.4.4
     + In description, there is no need to say which software is also using
     this package.
     + ABI change, so change package name.
     + Change Replaces to Conflicts field, and add libmono-cecil0.4-cil to it.
  * debian/rules:
     + There is no need to install *.dll files by hand. dh_install will do it.
     + Don't delete *.mdb files if 'nostrip' option is set